--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
     <nav>
         <div class='name'>Vaibhav Tekkalur</div>
-        <div class='links'>
-            <a href="">About</a>
-            <a href="">Skills</a>
-            <a href="">Links</a>
-            <a href="">Contact</a>
-        </div>
+        <ul class='links'>
+            <li><a href="">About</a></li>
+            <li><a href="">Skills</a></li>
+            <li><a href="">Links</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
     </nav>
     <div class='main'>
         Lorem ipsum dolor sit amet.
