Created Main Section

--- a/index.html
+++ b/index.html
@@ -20,9 +20,16 @@
         </ul>
     </nav>
     <div class='main'>
-        Lorem ipsum dolor sit amet.
+        <img src="img\profile-pic.jpg" alt="Profile Picture" class="pfp">
+        <p> Hi !
+            I'm <span>Vaibhav Tekkalur</span>
+            First-Year Student at VIT Chennai
+        </p>
     </div>
-    <div class='about'></div>
+    <br>
+    <div class='about'>
+        <h1>About Me</h1>
+    </div>
     <div class='skills'></div>
     <div class='links'></div> 
     <div class='contact'></div>
