Added About me section and styled

--- a/index.html
+++ b/index.html
@@ -27,14 +27,36 @@
         </p>
     </div>
     <br>
+    <br>
     <div class='about'>
         <h1>About Me</h1>
+        <ul>
+            <li>I'm a Freshman at VIT Chennai</li>
+            <li>Pursuing B.Tech. in Computer Science and Engineering</li>
+            <li>Currently Learning Frontend Web Development</li>
+            <li>Interested in Web Development , Blockchain and AI ML</li>
+        </ul>
     </div>
-    <div class='skills'></div>
-    <div class='links'></div> 
+    <!--
+    <div class='skills'>
+        <h1>My Skills</h1>
+        <div class="skillgrid"></div>
+    </div>
+    -->
+    <!--
+    <div class='mainlink'>
+        <h1>Links</h1>
+        <ul>
+            <li>Github</li>
+            <li>Linkedin</li>
+            <li>Discord</li>
+            <li>Mail</li>
+            <li>Instagram</li>
+        </ul>
+    </div> 
+    
     <div class='contact'></div>
-    <footer>
-        <span>Made with <span role="img">❤️</span> by Vaibhav T S</span>
-    </footer>
+    <footer></footer>
+    -->
 </body>
 </html>
