--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
     <title>Vaibhav Tekkalur</title>
 </head>
 <body>
     <nav>
         <div class='name'>Vaibhav Tekkalur</div>
         <ul class='links'>
-            <li><a href="">About</a></li>
-            <li><a href="">Skills</a></li>
+            <li><a href="#aboutme">About</a></li>
+            <li><a href="#skillsection">Skills</a></li>
             <li><a href="">Links</a></li>
             <li><a href="">Contact</a></li>
         </ul>
@@ -28,7 +29,7 @@
     </div>
     <br>
     <br>
-    <div class='about'>
+    <div class='about' id="aboutme">
         <h1>About Me</h1>
         <ul>
             <li>I'm a Freshman at VIT Chennai</li>
@@ -37,12 +38,36 @@
             <li>Interested in Web Development , Blockchain and AI ML</li>
         </ul>
     </div>
-    <!--
-    <div class='skills'>
+    <div class='skills' id='skillsection'>
         <h1>My Skills</h1>
-        <div class="skillgrid"></div>
+        <div class="skillgrid">
+            <div class = 'skill'>
+                <img src="./img/python.png" alt="python-logo">
+                <span>Python</span>
+            </div>
+            <div class = 'skill'>
+                <img src="./img/html.png" alt="html-logo">
+                <span>HTML</span>
+            </div>
+            <div class = 'skill'>
+                <img src="./img/css-3.png" alt="css-logo">
+                <span>CSS</span>
+            </div>
+            <div class = 'skill'>
+                <img src="./img/js.png" alt="js-logo">
+                <span>Javascript</span>
+            </div>
+            <div class = 'skill blank'>
+            </div>
+            <div class = 'skill blank'>
+            </div>
+            <div class = 'skill blank'>
+            </div>
+            <div class = 'skill blank'>
+            </div>
+
+        </div>
     </div>
-    -->
     <!--
     <div class='mainlink'>
         <h1>Links</h1>
@@ -56,7 +81,12 @@
     </div> 
     
     <div class='contact'></div>
-    <footer></footer>
+    -->
+    <!--
+    <footer>
+        <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    </footer>
     -->
 </body>
 </html>
+
