Added Links , Animations and Footer.Changed Background

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <ul class='links'>
             <li><a href="#aboutme">About</a></li>
             <li><a href="#skillsection">Skills</a></li>
-            <li><a href="">Links</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="#linksection">Links</a></li>
         </ul>
     </nav>
     <div class='main'>
@@ -68,25 +67,20 @@
 
         </div>
     </div>
-    <!--
-    <div class='mainlink'>
+    <div class='mainlink' id="linksection">
         <h1>Links</h1>
         <ul>
-            <li>Github</li>
-            <li>Linkedin</li>
-            <li>Discord</li>
-            <li>Mail</li>
-            <li>Instagram</li>
+            <li><a href="https://github.com/vaibhavTekk" target="_blank"><img src="./img/github.png" alt="github"></a></li>
+            <li><a href="https://www.linkedin.com/in/vaibhav-tekkalur" target="_blank"><img src="./img/linkedin.png" alt="linkedin"></a></li>
+            <li><a href="mailto:tekkalurvaibhav@gmail.com" target="_blank"><img src="./img/email.png" alt="email"></a></li>
+            <li><a href="https://www.instagram.com/thisisvibots01/" target="_blank"><img src="./img/instagram.png" alt="instagram"></a></li>
         </ul>
     </div> 
-    
-    <div class='contact'></div>
-    -->
-    <!--
     <footer>
+        <div>Made by Vaibhav Tekkalur ©️ 2021</div>
+        <br>
         <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </footer>
-    -->
 </body>
 </html>
 
