added tailwind to skills

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
                 <img src="./img/js.png" alt="js-logo">
                 <span>Javascript</span>
             </div>
-            <div class = 'skill blank'>
+            <div class = 'skill'>
+                <img src="./img/tailwind.svg" alt="js-logo">
+                <span>TailwindCSS</span>
             </div>
             <div class = 'skill blank'>
             </div>
