--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                 <img src="./img/tailwind.svg" alt="js-logo">
                 <span>TailwindCSS</span>
             </div>
-            <div class = 'skill blank'>
+            <div class = 'skill'>
+                <img src="./img/node-js.png" alt="js-logo">
+                <span>Node JS</span>
             </div>
             <div class = 'skill blank'>
             </div>
