--- a/index.html
+++ b/index.html
@@ -78,25 +78,31 @@
                 <img src="./img/screenshots/ttt.png">
                 <h1 id="cardheading">Tic Tac Toe</h1>
                 <p>Tic Tac Toe built using TailwindCSS and JS</p>
-                <a href="https://vaibhavtekk.github.io/tic-tac-toe-js/">Go to Project</a>
+                <a href="https://vaibhavtekk.github.io/tic-tac-toe-js/" target="_blank">Go to Project</a>
             </li>
             <li class="card">
                 <img src="./img/screenshots/calc.png">
                 <h1 id="cardheading">Calculator</h1>
                 <p>Calculator built using TailwindCSS and JS</p>
-                <a href="https://cranky-bhabha-43fb3e.netlify.app/">Go to Project</a>
+                <a href="https://cranky-bhabha-43fb3e.netlify.app/" target="_blank">Go to Project</a>
             </li>
             <li class="card">
                 <img src="./img/screenshots/weather.png">
                 <h1 id="cardheading">Weather App</h1>
                 <p>Weather App built using Accuweather API as part of course</p>
-                <a href="https://weather-app-99747.web.app/">Go to Project</a>
+                <a href="https://weather-app-99747.web.app/" target="_blank">Go to Project</a>
             </li>
             <li class="card">
                 <img src="./img/screenshots/yt.png">
                 <h1 id="cardheading">Youtube UI Clone</h1>
                 <p>Youtube UI Clone TailwindCSS</p>
-                <a href="https://stoic-shannon-a1ee63.netlify.app/">Go to Project</a>
+                <a href="https://stoic-shannon-a1ee63.netlify.app/" target="_blank">Go to Project</a>
+            </li>
+            <li class="card">
+                <img src="./img/screenshots/drum.png">
+                <h1 id="cardheading">Drum Kit</h1>
+                <p>Drum Kit Project using CSS and JS</p>
+                <a href="https://vaibhavtekk.github.io/drum-kit/" target="_blank">Go to Project</a>
             </li>
         </ul>
     </div>
