added react to skills

--- a/index.html
+++ b/index.html
@@ -1,125 +1,142 @@
 <html lang="en">
-<head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
     <title>Vaibhav Tekkalur</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-        <div class='name'>Vaibhav Tekkalur</div>
-        <ul class='links'>
-            <li><a href="#aboutme">About</a></li>
-            <li><a href="#skillsection">Skills</a></li>
-            <li><a href="#linksection">Links</a></li>
-        </ul>
+      <div class="name">Vaibhav Tekkalur</div>
+      <ul class="links">
+        <li><a href="#aboutme">About</a></li>
+        <li><a href="#skillsection">Skills</a></li>
+        <li><a href="#linksection">Links</a></li>
+      </ul>
     </nav>
-    <div class='main'>
-        <img src="img\profile-pic.jpg" alt="Profile Picture" class="pfp">
-        <p> Hi !
-            I'm <span>Vaibhav Tekkalur</span>
-            First-Year Student at VIT Chennai
-        </p>
+    <div class="main">
+      <img src="img\profile-pic.jpg" alt="Profile Picture" class="pfp" />
+      <p>
+        Hi ! I'm <span>Vaibhav Tekkalur</span>
+        First-Year Student at VIT Chennai
+      </p>
     </div>
-    <br>
-    <br>
-    <div class='about' id="aboutme">
-        <h1>About Me</h1>
-        <ul>
-            <li>I'm a Freshman at VIT Chennai</li>
-            <li>Pursuing B.Tech. in Computer Science and Engineering</li>
-            <li>Currently Learning Frontend Web Development</li>
-            <li>Interested in Web Development , Blockchain and AI ML</li>
-        </ul>
+    <br />
+    <br />
+    <div class="about" id="aboutme">
+      <h1>About Me</h1>
+      <ul>
+        <li>I'm a Freshman at VIT Chennai</li>
+        <li>Pursuing B.Tech. in Computer Science and Engineering</li>
+        <li>Currently Learning Frontend Web Development</li>
+        <li>Interested in Web Development , Blockchain and AI ML</li>
+      </ul>
     </div>
-    <div class='skills' id='skillsection'>
-        <h1>My Skills</h1>
-        <div class="skillgrid">
-            <div class = 'skill'>
-                <img src="./img/python.png" alt="python-logo">
-                <span>Python</span>
-            </div>
-            <div class = 'skill'>
-                <img src="./img/html.png" alt="html-logo">
-                <span>HTML</span>
-            </div>
-            <div class = 'skill'>
-                <img src="./img/css-3.png" alt="css-logo">
-                <span>CSS</span>
-            </div>
-            <div class = 'skill'>
-                <img src="./img/js.png" alt="js-logo">
-                <span>Javascript</span>
-            </div>
-            <div class = 'skill'>
-                <img src="./img/tailwind.svg" alt="js-logo">
-                <span>TailwindCSS</span>
-            </div>
-            <div class = 'skill'>
-                <img src="./img/node-js.png" alt="js-logo">
-                <span>Node JS</span>
-            </div>
-            <div class = 'skill blank'>
-            </div>
-            <div class = 'skill blank'>
-            </div>
-
+    <div class="skills" id="skillsection">
+      <h1>My Skills</h1>
+      <div class="skillgrid">
+        <div class="skill">
+          <img src="./img/python.png" alt="python-logo" />
+          <span>Python</span>
         </div>
+        <div class="skill">
+          <img src="./img/html.png" alt="html-logo" />
+          <span>HTML</span>
+        </div>
+        <div class="skill">
+          <img src="./img/css-3.png" alt="css-logo" />
+          <span>CSS</span>
+        </div>
+        <div class="skill">
+          <img src="./img/js.png" alt="js-logo" />
+          <span>Javascript</span>
+        </div>
+        <div class="skill">
+          <img src="./img/tailwind.svg" alt="js-logo" />
+          <span>TailwindCSS</span>
+        </div>
+        <div class="skill">
+          <img src="./img/node-js.png" alt="js-logo" />
+          <span>Node JS</span>
+        </div>
+        <div class="skill">
+          <img src="./img/React-icon.svg" alt="js-logo" />
+          <span>ReactJS</span>
+        </div>
+        <div class="skill blank"></div>
+      </div>
     </div>
     <div class="projects">
-        <h1>Projects</h1>
-        <ul>
-            <li class="card">
-                <img src="./img/screenshots/ttt.png">
-                <h1 id="cardheading">Tic Tac Toe</h1>
-                <p>Tic Tac Toe built using TailwindCSS and JS</p>
-                <a href="https://vaibhavtekk.github.io/tic-tac-toe-js/" target="_blank">Go to Project</a>
-            </li>
-            <li class="card">
-                <img src="./img/screenshots/calc.png">
-                <h1 id="cardheading">Calculator</h1>
-                <p>Calculator built using TailwindCSS and JS</p>
-                <a href="https://cranky-bhabha-43fb3e.netlify.app/" target="_blank">Go to Project</a>
-            </li>
-            <li class="card">
-                <img src="./img/screenshots/weather.png">
-                <h1 id="cardheading">Weather App</h1>
-                <p>Weather App built using Accuweather API as part of course</p>
-                <a href="https://weather-app-99747.web.app/" target="_blank">Go to Project</a>
-            </li>
-            <li class="card">
-                <img src="./img/screenshots/yt.png">
-                <h1 id="cardheading">Youtube UI Clone</h1>
-                <p>Youtube UI Clone TailwindCSS</p>
-                <a href="https://stoic-shannon-a1ee63.netlify.app/" target="_blank">Go to Project</a>
-            </li>
-            <li class="card">
-                <img src="./img/screenshots/drum.png">
-                <h1 id="cardheading">Drum Kit</h1>
-                <p>Drum Kit Project using CSS and JS</p>
-                <a href="https://vaibhavtekk.github.io/drum-kit/" target="_blank">Go to Project</a>
-            </li>
-        </ul>
+      <h1>Projects</h1>
+      <ul>
+        <li class="card">
+          <img src="./img/screenshots/ttt.png" />
+          <h1 id="cardheading">Tic Tac Toe</h1>
+          <p>Tic Tac Toe built using TailwindCSS and JS</p>
+          <a href="https://vaibhavtekk.github.io/tic-tac-toe-js/" target="_blank">Go to Project</a>
+        </li>
+        <li class="card">
+          <img src="./img/screenshots/calc.png" />
+          <h1 id="cardheading">Calculator</h1>
+          <p>Calculator built using TailwindCSS and JS</p>
+          <a href="https://cranky-bhabha-43fb3e.netlify.app/" target="_blank">Go to Project</a>
+        </li>
+        <li class="card">
+          <img src="./img/screenshots/weather.png" />
+          <h1 id="cardheading">Weather App</h1>
+          <p>Weather App built using Accuweather API as part of course</p>
+          <a href="https://weather-app-99747.web.app/" target="_blank">Go to Project</a>
+        </li>
+        <li class="card">
+          <img src="./img/screenshots/yt.png" />
+          <h1 id="cardheading">Youtube UI Clone</h1>
+          <p>Youtube UI Clone TailwindCSS</p>
+          <a href="https://stoic-shannon-a1ee63.netlify.app/" target="_blank">Go to Project</a>
+        </li>
+        <li class="card">
+          <img src="./img/screenshots/drum.png" />
+          <h1 id="cardheading">Drum Kit</h1>
+          <p>Drum Kit Project using CSS and JS</p>
+          <a href="https://vaibhavtekk.github.io/drum-kit/" target="_blank">Go to Project</a>
+        </li>
+      </ul>
     </div>
-    <div class='mainlink' id="linksection">
-        <h1>Links</h1>
-        <ul>
-            <li><a href="https://github.com/vaibhavTekk" target="_blank"><img src="./img/github.png" alt="github"></a></li>
-            <li><a href="https://www.linkedin.com/in/vaibhav-tekkalur" target="_blank"><img src="./img/linkedin.png" alt="linkedin"></a></li>
-            <li><a href="mailto:tekkalurvaibhav@gmail.com" target="_blank"><img src="./img/email.png" alt="email"></a></li>
-            <li><a href="https://www.instagram.com/thisisvibots01/" target="_blank"><img src="./img/instagram.png" alt="instagram"></a></li>
-        </ul>
-    </div> 
+    <div class="mainlink" id="linksection">
+      <h1>Links</h1>
+      <ul>
+        <li>
+          <a href="https://github.com/vaibhavTekk" target="_blank"><img src="./img/github.png" alt="github" /></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/vaibhav-tekkalur" target="_blank"
+            ><img src="./img/linkedin.png" alt="linkedin"
+          /></a>
+        </li>
+        <li>
+          <a href="mailto:tekkalurvaibhav@gmail.com" target="_blank"><img src="./img/email.png" alt="email" /></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/thisisvibots01/" target="_blank"
+            ><img src="./img/instagram.png" alt="instagram"
+          /></a>
+        </li>
+      </ul>
+    </div>
     <footer>
-        <div>Made by Vaibhav Tekkalur ©️ 2021</div>
-        <br>
-        <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+      <div>Made by Vaibhav Tekkalur ©️ 2021</div>
+      <br />
+      <div>
+        Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from
+        <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
-
