added projects link to navbar

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <ul class="links">
         <li><a href="#aboutme">About</a></li>
         <li><a href="#skillsection">Skills</a></li>
+        <li><a href="#projectsection">Projects</a></li>
         <li><a href="#linksection">Links</a></li>
       </ul>
     </nav>
@@ -74,7 +75,7 @@
         <div class="skill blank"></div>
       </div>
     </div>
-    <div class="projects">
+    <div id="projectsection" class="projects">
       <h1>Projects</h1>
       <ul>
         <li class="card">
