updated projects list

--- a/index.html
+++ b/index.html
@@ -79,6 +79,30 @@
       <h1>Projects</h1>
       <ul>
         <li class="card">
+          <img src="./img/screenshots/timetable.png" />
+          <h1 id="cardheading">VIT Timetable to Calendar</h1>
+          <p>Converts VTOP Timetable HTML to a Calendar File. Built using Express</p>
+          <ul class="buttons">
+            <li><a href="https://vit-timetable.herokuapp.com/" target="_blank">Go to Project</a></li>
+          </ul>
+        </li>
+        <li class="card">
+          <img src="./img/screenshots/terminal-website.png" />
+          <h1 id="cardheading">Terminal Portfolio</h1>
+          <p>An Interactive Terminal Style Portfolio built using NextJS</p>
+          <ul class="buttons">
+            <li><a href="https://terminal-website-alpha.vercel.app/" target="_blank">Go to Project</a></li>
+          </ul>
+        </li>
+        <li class="card">
+          <img src="./img/screenshots/walt-expense-tracker.png" />
+          <h1 id="cardheading">Wallt - Expense Tracker</h1>
+          <p>Simple Expense Tracker built with MERN Stack</p>
+          <ul class="buttons">
+            <li><a href="https://wallt.vercel.app" target="_blank">Go to Project</a></li>
+          </ul>
+        </li>
+        <li class="card">
           <img src="./img/screenshots/ttt.png" />
           <h1 id="cardheading">Tic Tac Toe</h1>
           <p>Tic Tac Toe built using TailwindCSS and JS</p>
@@ -90,6 +114,7 @@
           <p>Calculator built using TailwindCSS and JS</p>
           <a href="https://cranky-bhabha-43fb3e.netlify.app/" target="_blank">Go to Project</a>
         </li>
+        <!--
         <li class="card">
           <img src="./img/screenshots/weather.png" />
           <h1 id="cardheading">Weather App</h1>
@@ -102,6 +127,7 @@
           <p>Youtube UI Clone TailwindCSS</p>
           <a href="https://stoic-shannon-a1ee63.netlify.app/" target="_blank">Go to Project</a>
         </li>
+        -->
         <li class="card">
           <img src="./img/screenshots/drum.png" />
           <h1 id="cardheading">Drum Kit</h1>
