updated projects list

--- a/index.html
+++ b/index.html
@@ -82,25 +82,19 @@
           <img src="./img/screenshots/timetable.png" />
           <h1 id="cardheading">VIT Timetable to Calendar</h1>
           <p>Converts VTOP Timetable HTML to a Calendar File. Built using Express</p>
-          <ul class="buttons">
-            <li><a href="https://vit-timetable.herokuapp.com/" target="_blank">Go to Project</a></li>
-          </ul>
+          <a href="https://vit-timetable.herokuapp.com/" target="_blank">Go to Project</a>
         </li>
         <li class="card">
           <img src="./img/screenshots/terminal-website.png" />
           <h1 id="cardheading">Terminal Portfolio</h1>
           <p>An Interactive Terminal Style Portfolio built using NextJS</p>
-          <ul class="buttons">
-            <li><a href="https://terminal-website-alpha.vercel.app/" target="_blank">Go to Project</a></li>
-          </ul>
+          <a href="https://terminal-website-alpha.vercel.app/" target="_blank">Go to Project</a>
         </li>
         <li class="card">
           <img src="./img/screenshots/walt-expense-tracker.png" />
           <h1 id="cardheading">Wallt - Expense Tracker</h1>
           <p>Simple Expense Tracker built with MERN Stack</p>
-          <ul class="buttons">
-            <li><a href="https://wallt.vercel.app" target="_blank">Go to Project</a></li>
-          </ul>
+          <a href="https://wallt.vercel.app" target="_blank">Go to Project</a>
         </li>
         <li class="card">
           <img src="./img/screenshots/ttt.png" />
