--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <img src="img\profile-pic.jpg" alt="Profile Picture" class="pfp" />
       <p>
         Hi ! I'm <span>Vaibhav Tekkalur</span>
-        First-Year Student at VIT Chennai
+        Second-Year Student at VIT Chennai
       </p>
     </div>
     <br />
